--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ add_executable(day01 01.cpp)
 add_executable(day02 02.cpp)
 add_executable(day03 03.cpp)
 add_executable(day04 04.cpp)
+add_executable(day05 05.cpp)
 
