--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ add_executable(day02 02.cpp)
 add_executable(day03 03.cpp)
 add_executable(day04 04.cpp)
 add_executable(day05 05.cpp)
+add_executable(day06 06.cpp)
 
