--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,5 @@ add_executable(day03 03.cpp)
 add_executable(day04 04.cpp)
 add_executable(day05 05.cpp)
 add_executable(day06 06.cpp)
+add_executable(day07 07.cpp)
 
